fix bg blur issue on safari

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ a {
 #bgblur {
     z-index: 2;
     backdrop-filter: blur(8vw);
-    filter: blur(8vw);
+    /* filter: blur(8vw); */
     height: 100%;
     width: 100%;
     position: fixed;
